--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -2,128 +2,129 @@
   "store.product": {
     "title": "store-product", 
     "children": [
-    //  "rich-text#product" 
-      "flex-layout.row#product__breadcrumb"
+      "responsive-layout.desktop#desktop__product--details", 
+      "responsive-layout.mobile#mobile__product--details"
+      // "flex-layout.row#product__breadcrumb",
       // "flex-layout.row#product__info", 
       // "flex-layout.row#product__tabs"
     ]
   },
-    "flex-layout.row#product__breadcrumb": {
-      "title": "breadcrumb-product", 
+    // "flex-layout.row#product__breadcrumb": {
+    //   "title": "breadcrumb-product", 
+    //   "children": [
+    //     "flex-layout.col#product__breadcrumb"
+    //   ]
+    // },
+    //   "flex-layout.col#product__breadcrumb": {
+    //     "title": "breadcrumb-product", 
+    //     "children": [
+    //       "breadcrumb"
+    //     ]
+    //   },
+    "flex-layout.row#product__info": {
+      "title": "information-PDP", 
       "children": [
-        "flex-layout.col#product__breadcrumb"
+        "flex-layout.col#product__info--image", 
+        "flex-layout.col#product__info--data"
+      ]
+    }, 
+      "flex-layout.col#product__info--image": {
+        "title": "images-pdp", 
+        "children": [
+          "product-images#product__info--image"
+        ]
+      }, 
+      "product-images#product__info--image": {
+        "title": "images", 
+        "props": {
+          "displayThumbnailsArrows": true
+        }
+      },
+      "flex-layout.col#product__info--data": {
+        "title": "data-pdp", 
+        "children": [
+          "share",
+          "vtex.store-components:product-name", 
+          "vtex.store-components:product-brand",
+          "product-rating-inline",
+          "product-description",
+          "product-price",
+          "product-quantity", 
+          "rich-text#product__promo-info"
+        ]
+      },
+      "rich-text#product__promo-info":{
+        "title": "text-additional-product",
+        "props": {
+          "text": ""
+        }
+      },
+    "flex-layout.row#product__tabs": {
+      "title": "information-additional", 
+      "children": [
+        "tab-layout#product__tabs"
+      ]
+    }, 
+    "tab-layout#product__tabs": {
+      "title": "",
+      "children": [
+        "tab-list#product__tabs--list", 
+        "tab-content#product__tabs--content"
+      ]
+    }, 
+    "tab-list#product__tabs--list": {
+      "children": [
+        "tab-list.item#tabs__list--reviews-and-ratings", 
+        "tab-list.item#tabs__list--product-specification", 
+        "tab-list.item#tabs__list--questions"
       ]
     },
-      "flex-layout.col#product__breadcrumb": {
-        "title": "breadcrumb-product", 
-        "children": [
-          "breadcrumb"
-        ]
-      }
-  //   "flex-layout.row#product__info": {
-  //     "title": "information-PDP", 
-  //     "children": [
-  //       "flex-layout.col#product__info--image", 
-  //       "flex-layout.col#product__info--data"
-  //     ]
-  //   }, 
-  //     "flex-layout.col#product__info--image": {
-  //       "title": "images-pdp", 
-  //       "children": [
-  //         "product-images#product__info--image"
-  //       ]
-  //     }, 
-  //     "product-images#product__info--image": {
-  //       "title": "images", 
-  //       "props": {
-  //         // "displayThumbnailsArrows": 
-  //       }
-  //     },
-  //     "flex-layout.col#product__info--data": {
-  //       "title": "data-pdp", 
-  //       "children": [
-  //         "share",
-  //         "vtex.store-components:product-name", 
-  //         "vtex.store-components:product-brand",
-  //         "product-rating-inline",
-  //         "product-description",
-  //         "product-price",
-  //         "product-quantity", 
-  //         "rich-text#product__promo-info"
-  //       ]
-  //     },
-  //     "rich-text#product__promo-info":{
-  //       "title": "text-additional-product",
-  //       "props": {
-  //         "text": ""
-  //       }
-  //     },
-  //   "flex-layout.row#product__tabs": {
-  //     "title": "information-additional", 
-  //     "children": [
-  //       "tab-layout#product__tabs"
-  //     ]
-  //   }, 
-  //   "tab-layout#product__tabs": {
-  //     "title": "",
-  //     "children": [
-  //       "tab-list#product__tabs--list", 
-  //       "tab-content#product__tabs--content"
-  //     ]
-  //   }, 
-  //   "tab-list#product__tabs--list": {
-  //     "children": [
-  //       "tab-list.item#tabs__list--reviews-and-ratings", 
-  //       "tab-list.item#tabs__list--product-specification", 
-  //       "tab-list.item#tabs__list--questions"
-  //     ]
-  //   },
-  //     "tab-list.item#tabs__list--reviews-and-ratings": {
-  //       "props": {
-  //         "tabId": "reviews-and-ratings",
-  //         "label": "Revisiones y calificaciones", 
-  //         "defaultActiveTab": true
-  //       }
-  //     }, 
-  //     "tab-list.item#tabs__list--product-specification": {
-  //       "props": {
-  //         "tabId": "product-specification", 
-  //         "label": "Especificaciones de producto", 
-  //         "defaultActiveTab": false
-  //       }
-  //     }, 
-  //     "tab-list.item#tabs__list--questions": {
-  //       "props": {
-  //         "tabId": "questions", 
-  //         "label": "Preguntas y respuestas", 
-  //         "defaultActiveTab": false
-  //       }
-  //     },
-  //   "tab-content#product__tabs--content": {
-  //     "children": [
-  //       "tab-content.item#tabs__list--reviews-and-ratings", 
-  //       "tab-content.item#tabs__list--product-specification", 
-  //       "tab-content.item#tabs__list--questions"
-  //     ]
-  //   }, 
-  //   "tab-content.item#tabs__list--reviews-and-ratings": {
-  //     "props": {
-  //       "tabId": "reviews-and-ratings"
-  //     }, 
-  //     "children": ["product-reviews"]
-  //   }, 
-  //   "tab-content.item#tabs__list--product-specification": {
-  //     "props": {
-  //       "tabId": "product-specification"
-  //     }, 
-  //     "children": ["product-specifications"]
-  //   }, 
-  //   "tab-content.item#tabs__list--questions": {
-  //     "props": {
-  //       "tabId": "questions"
-  //     }, 
-  //     "children": [/*"questions-and-answers"*/]
-  //   }
+      "tab-list.item#tabs__list--reviews-and-ratings": {
+        "props": {
+          "tabId": "reviews-and-ratings",
+          "label": "Revisiones y calificaciones", 
+          "defaultActiveTab": true
+        }
+      }, 
+      "tab-list.item#tabs__list--product-specification": {
+        "props": {
+          "tabId": "product-specification", 
+          "label": "Especificaciones de producto", 
+          "defaultActiveTab": false
+        }
+      }, 
+      "tab-list.item#tabs__list--questions": {
+        "props": {
+          "tabId": "questions", 
+          "label": "Preguntas y respuestas", 
+          "defaultActiveTab": false
+        }
+      },
+    "tab-content#product__tabs--content": {
+      "children": [
+        "tab-content.item#tabs__list--reviews-and-ratings", 
+        "tab-content.item#tabs__list--product-specification", 
+        "tab-content.item#tabs__list--questions"
+      ]
+    }, 
+    "tab-content.item#tabs__list--reviews-and-ratings": {
+      "props": {
+        "tabId": "reviews-and-ratings"
+      }, 
+      "children": ["product-reviews"]
+    }, 
+    "tab-content.item#tabs__list--product-specification": {
+      "props": {
+        "tabId": "product-specification"
+      }, 
+      "children": ["product-specifications"]
+    }, 
+    "tab-content.item#tabs__list--questions": {
+      "props": {
+        "tabId": "questions"
+      }, 
+      "children": [/*"questions-and-answers"*/]
+    }
 }
 
   // "store.product": {
