--- a/store/blocks/global/components/product/product-breadcrumb.jsonc
+++ b/store/blocks/global/components/product/product-breadcrumb.jsonc
@@ -10,5 +10,11 @@
     "children": [
       "breadcrumb"
     ]
-  }
+  }, 
+    "breadcrumb": {
+      "title": "breadcrumb",
+      "props": {
+        "showOnMobile": true
+      }
+    }
 }
