--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,8 @@
     "vtex.checkout-summary": "0.x",
     "vtex.product-list": "0.x",
     "vtex.product-price": "1.x",
-    "vtex.store-newsletter": "1.x"
+    "vtex.store-newsletter": "1.x",
+    "vtex.product-specifications": "1.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x",
