--- a/store/blocks/phone/screen/home.jsonc
+++ b/store/blocks/phone/screen/home.jsonc
@@ -2,6 +2,7 @@
   "responsive-layout.phone": {
     "title": "phone component",
     "children": [
+      "whatsapp-button",
       "rich-text#global__home--title-categories",
       "flex-layout.row#phone__home--categories",
       "flex-layout.row#phone__home--section-promotions",
