feat: adding custom component bullets diagramation

--- a/store/blocks/mobile/screen/home.jsonc
+++ b/store/blocks/mobile/screen/home.jsonc
@@ -3,6 +3,7 @@
     "title": "mobile component",
     "children": [
       "list-context.image-list#mobile__home--slider-list",
+      "flex-layout.row#global__home--bullets",
       "flex-layout.row#mobile__home--section-search"
     ]
   }
