--- a/store/blocks/desktop/components/home/home-main.jsonc
+++ b/store/blocks/desktop/components/home/home-main.jsonc
@@ -9,6 +9,7 @@
   "flex-layout.col#desktop__home--main":{
     "title": "desktop-home-main", 
     "children": [
+      "flex-layout.row#global__home--bullets",
       "flex-layout.row#desktop__home--section-search",
       "rich-text#global__home--title-categories",
       "flex-layout.row#global__home--categories",
