--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,8 @@
     "vtex.store-newsletter": "1.x",
     "vtex.product-specifications": "1.x",
     "itgloberspartnercl.whatsapp-button": "0.x",
-    "itgloberspartnercl.bullets-diagramation": "0.x"
+    "itgloberspartnercl.bullets-diagramation": "0.x",
+    "itgloberspartnercl.add-to-cart-info": "0.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x",
