feat: adding the custom-department-search component

--- a/store/blocks/mobile/components/header/header-section-bottom.jsonc
+++ b/store/blocks/mobile/components/header/header-section-bottom.jsonc
@@ -1,7 +1,10 @@
 {
   "header-row#mobile__header--bottom": {
     "title": "header-bottom",
-    "children": ["search-bar#header--search"], 
+    "children": [
+      "search-bar#header--search", 
+      "department-search"
+    ], 
     "props": {
         "blockClass": "header__bottom", 
         "sticky": true
