feat: pdf size settings on mobile

--- a/store/blocks/global/components/static-pages/privacy-policy.jsonc
+++ b/store/blocks/global/components/static-pages/privacy-policy.jsonc
@@ -22,7 +22,7 @@
       }
     }, 
     "flex-layout.col#privacy-policy-pdf": {
-      "title": "", 
+      "title": "container-privacy-policy-pdf", 
       "children": [
         "pdf-reader"
       ]
@@ -31,7 +31,7 @@
         "title": "pdf-reader", 
         "props": {
           "pdfUrl": "assets/docs/privacidad.pdf", 
-          "width": 500, 
+          "width": 600, 
           "height": 700
         }
       }
