feat: adding custom department search component in plp on desktop

--- a/store/blocks/mobile/components/header/header-section-bottom.jsonc
+++ b/store/blocks/mobile/components/header/header-section-bottom.jsonc
@@ -2,8 +2,7 @@
   "header-row#mobile__header--bottom": {
     "title": "header-bottom",
     "children": [
-      "search-bar#header--search", 
-      "department-search"
+      "search-bar#header--search"
     ], 
     "props": {
         "blockClass": "header__bottom", 
