--- a/store/blocks/desktop/components/search/department/search-results.jsonc
+++ b/store/blocks/desktop/components/search/department/search-results.jsonc
@@ -47,11 +47,17 @@
       "flex-layout.col#search__results--content": {
         "title": "search-result-content", 
         "children": [
+          "flex-layout.row#desktop__department--search-custom",
           "rich-text#global__home--title-products",
           "list-context.product-list#global__search--content-slider",
           "order-by.v2", 
           "search-content#global__search--content-products"
         ],
         "props": {"width": "80%"}
+      }, 
+      "flex-layout.row#desktop__department--search-custom": {
+        "title": "", 
+        "children": ["department-search"], 
+        "props": {"blockClass": "desktop__department--search-custom"}
       }
 }
