--- a/store/blocks/tablet/components/home/home-main.jsonc
+++ b/store/blocks/tablet/components/home/home-main.jsonc
@@ -14,6 +14,8 @@
       "flex-layout.row#global__home--section-promotion",
       "rich-text#global__home--title-products",
       "list-context.product-list#global__home--products-recommended",
+      "rich-text#global__home--title-brands",
+      "flex-layout.row#global__home--bullets",
       "rich-text#global__home--title-favorites",
       "list-context.product-list#global__home--products-recommended",
       "rich-text#global__home--title-services",
