--- a/store/blocks/global/components/home/home-rich-text.jsonc
+++ b/store/blocks/global/components/home/home-rich-text.jsonc
@@ -30,5 +30,13 @@
         "text": "SERVICIOS", 
         "textPosition": "CENTER"
     }
+  }, 
+  "rich-text#global__home--title-brands": {
+    "title": "Title-brands", 
+    "props": {
+        "blockClass": "home__title", 
+        "text": "NUESTRAS MARCAS", 
+        "textPosition": "CENTER"
+    }
   }
 }
