--- a/store/blocks/desktop/components/home/home-main.jsonc
+++ b/store/blocks/desktop/components/home/home-main.jsonc
@@ -22,7 +22,8 @@
       "rich-text#global__home--title-services",
       "flex-layout.row#global__home--section-services1",
       "flex-layout.row#global__home--section-services2",
-      "modal-trigger#desktop__home--modal-children"
+      "quick-order"
+      // "modal-trigger#desktop__home--modal-children"
       // "modal-trigger#desktop__home--modal-event"
     ]
   }
