--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -2,7 +2,7 @@
   "responsive-layout.desktop": {
     "title": "desktop component",
     "children": [
-      "whatsapp-button",
+      // "whatsapp-button",
       "list-context.image-list#desktop__home--slider-list",
       "flex-layout.row#desktop__home--main"
     ]
