--- a/store/blocks/tablet/components/home/home-main.jsonc
+++ b/store/blocks/tablet/components/home/home-main.jsonc
@@ -18,6 +18,8 @@
       "flex-layout.row#global__home--bullets",
       "rich-text#global__home--title-favorites",
       "list-context.product-list#global__home--products-recommended",
+      "rich-text#global__home--title-best-sellers", 
+      "custom-grid#global__home--custom-grid",
       "rich-text#global__home--title-services",
       "flex-layout.row#global__home--section-services1",
       "flex-layout.row#global__home--section-services2"
